--- a/NodeJsProjects/A8_authSystem/package.json
+++ b/NodeJsProjects/A8_authSystem/package.json
@@ -7,11 +7,12 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "test": "nodemon index.js"
+    "dev": "nodemon index.js"
   },
   "devDependencies": {
     "dotenv": "^17.2.0",
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+    "prettier": "^3.6.2"
   },
   "dependencies": {
     "cookie-parser": "^1.4.7",
