--- a/NodeJsProjects/A8_authSystem/package.json
+++ b/NodeJsProjects/A8_authSystem/package.json
@@ -15,7 +15,7 @@
     "prettier": "^3.6.2"
   },
   "dependencies": {
-    "bcrypt": "^6.0.0",
+    "bcryptjs": "^3.0.2",
     "cookie-parser": "^1.4.7",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
