Add project 9 and add folder structure + basic package installation

--- a/NodeJsProjects/A9_roleBasedAuthorization/package.json
+++ b/NodeJsProjects/A9_roleBasedAuthorization/package.json
@@ -1,7 +1,13 @@
 {
-  "name": "a8_authsystem",
+  "name": "a9_rolebasedauthorization",
   "version": "1.0.0",
-  "description": "Authentication system",
+  "description": "",
+  "keywords": [
+    "nodejs",
+    "js",
+    "rolebasedauthentication",
+    "rolebasedauthorization"
+  ],
   "license": "ISC",
   "author": "Wasiq Afnan Ansari",
   "type": "module",
@@ -10,16 +16,15 @@
     "start": "node index.js",
     "dev": "nodemon index.js"
   },
+  "dependencies": {
+    "cookie-parser": "^1.4.7",
+    "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.16.3"
+  },
   "devDependencies": {
     "dotenv": "^17.2.0",
     "nodemon": "^3.1.10",
     "prettier": "^3.6.2"
-  },
-  "dependencies": {
-    "bcryptjs": "^3.0.2",
-    "cookie-parser": "^1.4.7",
-    "express": "^5.1.0",
-    "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.16.2"
   }
 }
