Add constant, mongodb connection code, model

--- a/NodeJsProjects/A9_roleBasedAuthorization/package.json
+++ b/NodeJsProjects/A9_roleBasedAuthorization/package.json
@@ -13,8 +13,8 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js"
+    "start": "node src/index.js",
+    "dev": "nodemon src/index.js"
   },
   "dependencies": {
     "cookie-parser": "^1.4.7",
