Refactor email sending functionality and restructure project files

--- a/NodeJsProjects/A11_MailUsingGmailAPI/package.json
+++ b/NodeJsProjects/A11_MailUsingGmailAPI/package.json
@@ -12,6 +12,7 @@
   "type": "module",
   "dependencies": {
     "dotenv": "^17.2.3",
+    "express": "^5.2.1",
     "googleapis": "^169.0.0",
     "nodemailer": "^7.0.12"
   }
